--- a/pom.xml
+++ b/pom.xml
@@ -120,12 +120,6 @@
 		</dependency>
     </dependencies>
     <build>
- <plugins>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.19.1</version>
-        </plugin>
   </plugins>
         <plugins>
             <plugin>
@@ -162,6 +156,14 @@
 		        </executions>
 		</plugin>
         </plugins>
+	<plugins>
+    <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M3</version>
+    </plugin>
+    </plugins>
+
     </build>
 	<repositories>
     <repository>
